--- a/home/index.html
+++ b/home/index.html
@@ -65,7 +65,7 @@
         <main class="main-content">
             <section class="intro">
                 <p>
-                    Hi, I'm Grey also known as 'sharpennd' or 'Niqhtlyy' on some corners of the internet, welcome to my website! 
+                    Hi, I'm Grey also known as 'sharpennd' on some corners of the internet, welcome to my website! 
                 </p>
                 <p>‎‎‎‎</p>
                 <p>
