--- a/home/index.html
+++ b/home/index.html
@@ -83,6 +83,11 @@
                     <a href="https://ko-fi.com/sharpennd" class="button">Ko-Fi</a>
                 </div>
             </section>
+            <section class="button-box">
+                <a href="/buttons"><img src="/images/button1.gif" alt="Button 1"></a>
+                <a href="/buttons"><img src="/images/button2.gif" alt="Button 2"></a>
+                <a href="/buttons"><img src="/images/button3.gif" alt="Button 3"></a>
+            </section>
         </main>
     </div>
 </body>
