--- a/home/index.html
+++ b/home/index.html
@@ -84,9 +84,10 @@
                 </div>
             </section>
             <section class="button-box">
-                <a href="/buttons"><img src="/images/button1.gif" alt="Button 1"></a>
-                <a href="/buttons"><img src="/images/button2.gif" alt="Button 2"></a>
-                <a href="/buttons"><img src="/images/button3.gif" alt="Button 3"></a>
+                <a href="#"><img src="/images/www.gif"></a>
+                <a href="#"><img src="/images/paws.gif"></a>
+                <a href="#"><img src="/images/transrights.gif"></a>
+                <a href="#"><img src="/images/drpepper.gif"></a>
             </section>
         </main>
     </div>
