--- a/home/index.html
+++ b/home/index.html
@@ -88,6 +88,10 @@
                 <a href="#"><img src="/images/paws.gif"></a>
                 <a href="#"><img src="/images/transrights.gif"></a>
                 <a href="#"><img src="/images/drpepper.gif"></a>
+                <a href="#"><img src="/images/anythingbut.gif"></a>
+                <a href="#"><img src="/images/firefoxnowneo.png"></a>
+                <a href="#"><img src="/images/bi_flag.png"></a>
+                <a href="#"><img src="/images/trans_flag.png"></a>
             </section>
         </main>
     </div>
