--- a/home/index.html
+++ b/home/index.html
@@ -35,6 +35,10 @@
             
             <div class="image-container">
                 <img src="/images/pin.png" alt="Pronouns" class="pin-image">
+                <div class="extra-images">
+                    <img src="/images/bi_flag.png" alt="Extra Image 1">
+                    <img src="/images/trans_flag.png" alt="Extra Image 2">
+                </div>
             </div>
 
             <nav class="nav-menu">
@@ -90,8 +94,6 @@
                 <a href="#"><img src="/images/drpepper.gif"></a>
                 <a href="#"><img src="/images/anythingbut.gif"></a>
                 <a href="#"><img src="/images/firefoxnowneo.png"></a>
-                <a href="#"><img src="/images/bi_flag.png"></a>
-                <a href="#"><img src="/images/trans_flag.png"></a>
             </section>
         </main>
     </div>
