--- a/collection/index.html
+++ b/collection/index.html
@@ -35,6 +35,10 @@
 
             <div class="image-container">
                 <img src="/images/pin.png" alt="Pronouns" class="pin-image">
+                <div class="extra-images">
+                    <img src="/images/bi_flag.png" alt="Extra Image 1">
+                    <img src="/images/trans_flag.png" alt="Extra Image 2">
+                </div>
             </div>
 
             <nav class="nav-menu">
