--- a/home/index.html
+++ b/home/index.html
@@ -35,10 +35,11 @@
             
             <div class="image-container">
                 <img src="/images/pin.png" alt="Pronouns" class="pin-image">
-                <div class="extra-images">
-                    <img src="/images/bi_flag.png" alt="Extra Image 1">
-                    <img src="/images/trans_flag.png" alt="Extra Image 2">
-                </div>
+            </div>
+
+            <div class="flags">
+                <img src="/images/bi_flag.png">
+                <img src="/images/trans_flag.png">
             </div>
 
             <nav class="nav-menu">
