--- a/home/index.html
+++ b/home/index.html
@@ -78,6 +78,7 @@
                 <div class="social-icons">
                     <a href="https://bsky.app/profile/sharpennd.xyz" class="button">BlueSky</a>
                     <a rel="me" href="https://tech.lgbt/@sharpennd">Mastodon</a>
+                    <a href="https://twitter.com/sharpennd" class="button">Twitter</a>
                     <a href="https://github.com/sharpennd" class="button">Github</a>
                     <a href="https://roblox.com/users/736386964/profile" class="button">Roblox</a>
                     <a href="https://ko-fi.com/sharpennd" class="button">Ko-Fi</a>
