--- a/projects/index.html
+++ b/projects/index.html
@@ -44,7 +44,7 @@
                     <li><a href="/collection">Collection</a></li>
                     <li><a href="/projects">Projects</a></li>
                     <li><a href="/blog">Blog</a></li>
-                    <li><a href="mailto:sharpennd@gmail.com">Contact</a></li>
+                    <li><a href="mailto:contact@sharpennd.xyz">Contact</a></li>
                 </ul>
             </nav>
 
