--- a/projects/mc-server/index.html
+++ b/projects/mc-server/index.html
@@ -67,15 +67,14 @@
                 <p>sharpennd's public mc server!</p>
                 <div class="divider"></div>
                 <p>IP: mc.sharpennd.xyz</p>
-                <p>Port: 25565</p>
                 <p>‎‎‎‎</p>
-                <a href="http://mc.sharpennd.xyz:25905/" target="_blank">Pl3xMap</a>
-                <div class="divider""></div>
-                <p>BEDROCK COMPATIBLE; CHANGE PORT TO ONE ABOVE FOR IT TO WORK!</p>
+                <a href="http://mc.sharpennd.xyz:8080/" target="_blank">Pl3xMap</a>
+                <div class="divider""></div
                 <p>‎‎‎‎</p>
                 Any issues/questions contact 
                 <a href="mailto:contact@sharpennd.xyz" class="email-link">contact@sharpennd.xyz</a>
             </section>
+            <p>‎‎‎‎</p>
             <p>‎‎‎‎</p>
             <section class="mc-stats">
                 <div id="server-status">Loading server data...</div>
