--- a/collection/index.html
+++ b/collection/index.html
@@ -150,5 +150,6 @@
         </main>
     </div>
     <script src="/scripts/expandable_sections.js"></script>
+    <script src="/scripts/resize.js"></script>
 </body>
 </html>
