--- a/projects/index.html
+++ b/projects/index.html
@@ -73,5 +73,6 @@
             </section>
         </main>
     </div>
+    <script src="/scripts/expandable_sections.js"></script>
 </body>
 </html>
