--- a/projects/mc-server/index.html
+++ b/projects/mc-server/index.html
@@ -83,5 +83,6 @@
         </main>
     </div>
     <script src="/scripts/mc-stats.js"></script>
+    <script src="/scripts/resize.js"></script>
 </body>
 </html>
