--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sharpennd - redirecting...</title>
     <link rel="shortcut icon" href="/images/paw-64.ico?v=1" type="image/x-icon">
-    <script src="scripts/redirect.js" type="text/javascript"></script>
 </head>
 <body>
     <p>If you are not redirected, <a href="/home">click here</a>.</p>
 </body>
+<script src="scripts/redirect.js""></script>
 </html>
