--- a/privacy/index.html
+++ b/privacy/index.html
@@ -46,5 +46,6 @@
         <a href="/projects">Projects</a>
         <a href="/blog">Blog</a>
     </footer>
+    <script src="/scripts/resize.js"></script>
 </body>
 </html>
