--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
     <p>If you are not redirected, <a href="/home">click here</a>.</p>
 </body>
-<script src="scripts/redirect.js""></script>
+<script src="scripts/redirect.js"></script>
 </html>
