--- a/collection/index.html
+++ b/collection/index.html
@@ -42,7 +42,6 @@
                     <li><a href="/home">Home</a></li>
                     <li><a href="/collection">Collection</a></li>
                     <li><a href="/projects">Projects</a></li>
-                    <li><a href="/blog">Blog</a></li>
                     <li><a href="mailto:contact@sharpennd.xyz">Contact</a></li>
                 </ul>
             </nav>
@@ -121,6 +120,7 @@
                         <li>Legend of Zelda: Breath of the Wild</li>
                         <li>Super Mario: Odyssey</li>
                         <li>Luigi's Mansion 3</li>
+                        <li>Pokémon: Violet</li>
                     </ul>
                 </div>
             </section>
@@ -140,6 +140,7 @@
                             <li>Crash Bandicoot: N-Sane Trilogy</li>
                             <li>Grand Theft Auto V</li>
                             <li>The LEGO Movie Videogame</li>
+                            <li>Red Dead Redemption 2</li>
                             <li>Viva Pinata: Trouble In Paradise (Xbox 360)</li>
                         </ul>
                     </div>
