--- a/collection/index.html
+++ b/collection/index.html
@@ -42,7 +42,7 @@
                     <li><a href="/home">Home</a></li>
                     <li><a href="/collection">Collection</a></li>
                     <li><a href="/projects">Projects</a></li>
-                    <li><a href="mailto:contact@sharpennd.xyz">Contact</a></li>
+                    <li><a href="mailto:grey@sharpennd.xyz">Contact</a></li>
                 </ul>
             </nav>
 
