--- a/privacy/index.html
+++ b/privacy/index.html
@@ -35,7 +35,7 @@
             <h2>Contact</h2>
             <p>
                 If you have any questions regarding this, do not hesitate to contact me via email: 
-                <a href="mailto:contact@sharpennd.xyz" class="email-link">contact@sharpennd.xyz</a>.
+                <a href="mailto:grey@sharpennd.xyz" class="email-link">grey@sharpennd.xyz</a>.
             </p>     
         </div>
     </div>
