--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h2>Page Not Found</h2>
         <p>Sorry, the page you are looking for may not exist or an error has occured!</p>
-        <p>If this is a mistake, please contact <a href="mailto:contact@sharpennd.xyz">contact@sharpennd.xyz</a>.</p>
+        <p>If this is a mistake, please contact <a href="mailto:grey@sharpennd.xyz">grey@sharpennd.xyz</a>.</p>
         <a href="index.html">Go back to Home</a>
     </div>
     <script src="/scripts/resize_elements.js"></script>
