--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 
     <meta data-rh="true" name="twitter:card" content="summary_large_image">
-    <meta data-rh="true" property="og:url" content="https://www.sharpennd.xyz/">
+    <meta data-rh="true" property="og:url" content="https://sharpennd.xyz/">
     <meta data-rh="true" name="theme-color" content="#680af5">
     <meta data-rh="true" property="og:title" content="sharpennd">
     <meta data-rh="true" property="og:description" content="a personal website :3">
@@ -26,6 +26,12 @@
 </head>
 
 <body>
+     <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <div class="container">
         <aside class="sidebar">
             <div class="profile">
