--- a/projects/index.html
+++ b/projects/index.html
@@ -27,6 +27,12 @@
 </head>
 
 <body>
+     <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <div class="container">
         <aside class="sidebar">
             <div class="profile">
