--- a/home/index.html
+++ b/home/index.html
@@ -32,6 +32,8 @@
         <span></span>
     </div>
 
+     <div class="overlay" id="overlay"></div>
+
     <div class="container">
         <aside class="sidebar">
             <div class="profile">
