--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="/images/paw-64.ico?v=1" type="image/x-icon">
 </head>
 <body>
-    
+    <h1>Under Construction!</h1>
 </body>
-<script src="scripts/redirect.js"></script>
 </html>
