--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sharpennd - redirecting...</title>
+    <title>sharpennd</title>
     <link rel="shortcut icon" href="/images/paw-64.ico?v=1" type="image/x-icon">
 </head>
 <body>
