--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sharpennd</title>
-    <link rel="shortcut icon" href="/images/paw-64.ico?v=1" type="image/x-icon">
-</head>
-<body>
-    <h1>Under Construction!</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=/home" />
+    <script>
+      window.location.href = "/home";
+    </script>
+    <style>
+      body {
+        background: #0e0e0e;
+        color: #f5f5f5;
+        font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        flex-direction: column;
+        text-align: center;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+        border-bottom: 1px solid rgba(255,255,255,0.3);
+      }
+      a:hover {
+        border-bottom-color: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <p>Redirecting to <a href="/home">/home</a>...</p>
+    <p>If you are not redirected automatically, <a href="/home">click here</a>.</p>
+  </body>
 </html>
