--- a/home/index.html
+++ b/home/index.html
@@ -274,7 +274,7 @@
       <li>Collecting games & CDs</li>
       <li>Drawing and 2D animation</li>
     </ul>
-    <p>...And probably a lot more!</p>
+    <p>...And a whole lot more!</p>
 
     <p style="margin-top:6px">Below is a list of my socials and other links where you can view my content, support me, or contact me!</p>
 
