--- a/home/index.html
+++ b/home/index.html
@@ -271,7 +271,8 @@
     <ul class="inline-list">
       <li>Technology, both modern and vintage</li>
       <li>Programming (Lua, HTML, CSS, JavaScript, Python)</li>
-      <li>Collecting games & CDs</li>
+      <li>Collecting games for the various consoles I own</li>
+      <li>Collecting CDs of my favourite artists</li>
       <li>Drawing and 2D animation</li>
     </ul>
     <p>...And a whole lot more!</p>
