--- a/home/index.html
+++ b/home/index.html
@@ -217,6 +217,8 @@
       text-decoration:none;
       color:var(--text);
       font-size:13px;
+      position:relative;
+      transition:box-shadow .25s ease,transform .25s ease,border-color .25s ease;
     }
 
     .link-btn img,
@@ -225,6 +227,53 @@
       height:16px;
       filter:invert(90%);
       display:block;
+    }
+
+    .link-btn:hover{
+      border-color:#ffffff;
+      box-shadow:
+        0 0 0 1px rgba(191, 191, 191, 0.4),
+        0 0 14px rgba(197, 197, 197, 0.45),
+        0 0 28px rgba(182, 182, 182, 0.25);
+      transform:translateY(-1px);
+    }
+
+    .link-btn[data-tooltip]::after{
+      content:attr(data-tooltip);
+      position:absolute;
+      bottom:120%;
+      left:50%;
+      transform:translateX(-50%) translateY(6px);
+      background:#ffffff;
+      color:#000;
+      font-size:11px;
+      padding:6px 9px;
+      border-radius:8px;
+      white-space:nowrap;
+      opacity:0;
+      pointer-events:none;
+      transition:opacity .2s ease,transform .2s ease;
+      box-shadow:0 6px 20px rgba(0,0,0,.45);
+      z-index:100;
+    }
+
+    .link-btn[data-tooltip]::before{
+      content:"";
+      position:absolute;
+      bottom:calc(120% - 4px);
+      left:50%;
+      transform:translateX(-50%);
+      border-width:6px;
+      border-style:solid;
+      border-color:#1db954 transparent transparent transparent;
+      opacity:0;
+      transition:opacity .2s ease;
+    }
+
+    .link-btn[data-tooltip]:hover::after,
+    .link-btn[data-tooltip]:hover::before{
+      opacity:1;
+      transform:translateX(-50%) translateY(0);
     }
 
     .site-footer{
@@ -244,20 +293,27 @@
       }
     }
 
-  .pronouns {
-    font-style: italic;
-    font-weight: normal;
-    font-size: 0.9em;
-  }
+    .pronouns{
+      font-style:italic;
+      font-weight:normal;
+      font-size:.9em;
+    }
+
+    .site-header .link-btn:hover{
+      box-shadow:none;
+      transform:none;
+      border-color:var(--border);
+    }
   </style>
 </head>
 
 <body>
-
 <header class="site-header">
   <div class="header-inner">
     <img src="../assets/paw.png" width="26" height="26">
-    <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/jellyfin.svg">Jellyfin</a>
+    <a href="https://jellyfin.sharpennd.xyz" target="_blank" class="link-btn">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/jellyfin.svg">Jellyfin
+    </a>
   </div>
 </header>
 
@@ -295,12 +351,24 @@
 
     <p style="margin-top:6px">Below is a list of my socials and other links where you can view my content, support me, or contact me!</p>
 
-    <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/maildotru.svg">Email</a>
-    <a href="https://github.com/sharpennd" target="_blank" class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg">GitHub</a>
-    <a href="https://www.roblox.com/users/736386964/profile" target="_blank" class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/roblox.svg">Roblox</a>
-    <a href="https://twitter.com/sharpennd" target="_blank" class="link-btn"><svg viewBox="0 0 30 30"><path d="M28 6.937c-.957.425-1.985.711-3.064.84 1.102-.66 1.947-1.705 2.345-2.951-1.03.611-2.172 1.055-3.388 1.295-.973-1.037-2.359-1.685-3.893-1.685-2.946 0-5.334 2.389-5.334 5.334 0 .418.048.826.138 1.215C8.371 10.762 4.441 8.638 1.809 5.41c-.458.789-.721 1.705-.721 2.684 0 1.85.941 3.483 2.372 4.439-.874-.028-1.697-.268-2.416-.667v.067c0 2.585 1.838 4.741 4.279 5.23-.447.122-.919.187-1.406.187-.343 0-.678-.034-1.003-.095.679 2.119 2.649 3.662 4.983 3.705-1.825 1.431-4.125 2.284-6.625 2.284-.43 0-.855-.025-1.273-.075 2.361 1.513 5.164 2.396 8.177 2.396 9.812 0 15.176-8.128 15.176-15.177 0-.231-.005-.461-.015-.69C26.38 8.945 27.285 8.006 28 6.937z"/></svg>Twitter</a>
-    <a href="https://discord.com/users/340138001252220939/" target="_blank"class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg">Discord</a>
-    <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/kofi.svg">Ko-Fi</a>
+    <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn" data-tooltip="grey@sharpennd.xyz">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/maildotru.svg">Email
+    </a>
+    <a href="https://github.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg">GitHub
+    </a>
+    <a href="https://www.roblox.com/users/736386964/profile" target="_blank" class="link-btn" data-tooltip="Niqhtlyy">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/roblox.svg">Roblox
+    </a>
+    <a href="https://twitter.com/sharpennd" target="_blank" class="link-btn" data-tooltip="@sharpennd">
+      <svg viewBox="0 0 30 30"><path d="M28 6.937c-.957.425-1.985.711-3.064.84 1.102-.66 1.947-1.705 2.345-2.951-1.03.611-2.172 1.055-3.388 1.295-.973-1.037-2.359-1.685-3.893-1.685-2.946 0-5.334 2.389-5.334 5.334 0 .418.048.826.138 1.215C8.371 10.762 4.441 8.638 1.809 5.41c-.458.789-.721 1.705-.721 2.684 0 1.85.941 3.483 2.372 4.439-.874-.028-1.697-.268-2.416-.667v.067c0 2.585 1.838 4.741 4.279 5.23-.447.122-.919.187-1.406.187-.343 0-.678-.034-1.003-.095.679 2.119 2.649 3.662 4.983 3.705-1.825 1.431-4.125 2.284-6.625 2.284-.43 0-.855-.025-1.273-.075 2.361 1.513 5.164 2.396 8.177 2.396 9.812 0 15.176-8.128 15.176-15.177 0-.231-.005-.461-.015-.69C26.38 8.945 27.285 8.006 28 6.937z"/></svg>Twitter
+    </a>
+    <a href="https://discord.com/users/340138001252220939/" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg">Discord
+    </a>
+    <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/kofi.svg">Ko-Fi
+    </a>
   </section>
 </main>
 
@@ -335,10 +403,9 @@
       spotifyContent.innerHTML=`<div class="spotify-info"><div class="album-art"><img src="${d.album_art_url}"></div><div class="spotify-text"><div class="spotify-track-title">${d.song}</div><div class="spotify-track-artist">${d.artist}</div><div class="progress-wrapper"><span>${format(e)}</span><div class="progress-bar-container"><div class="progress-bar" style="width:${p}%"></div></div><span>${format(t)}</span></div></div></div>`
     }catch{spotifyStatus.textContent="Error loading Spotify"}
   }
-
+  
   loadSpotify()
   setInterval(loadSpotify,1000)
 </script>
-
 </body>
 </html>
