--- a/home/index.html
+++ b/home/index.html
@@ -337,7 +337,7 @@
   </section>
 
   <section class="card">
-    <p>Hi, I'm Grey also known as <b>'sharpennd'</b> on some corners of the internet, welcome to my website! :3</p>
+    <p>Hi, I'm Grey, an 18 year old trans guy who's also known as <b>'sharpennd'</b> on some corners of the internet, welcome to my website! :3</p>
 
     <p style="margin-top:6px">My current interests include:</p>
     <ul class="inline-list">
