--- a/home/index.html
+++ b/home/index.html
@@ -16,9 +16,7 @@
       --radius:12px;
       --max-w:1050px;
     }
-
     *{box-sizing:border-box;margin:0;padding:0}
-
     body{
       font-family:Inter,system-ui,sans-serif;
       background:var(--bg);
@@ -28,14 +26,12 @@
       display:flex;
       flex-direction:column;
     }
-
     .container{
       max-width:var(--max-w);
       margin:0 auto;
       padding:0 18px;
       width:100%;
     }
-
     .site-header{
       position:sticky;
       top:0;
@@ -44,7 +40,6 @@
       border-bottom:1px solid var(--border);
       z-index:50;
     }
-
     .header-inner{
       width:100%;
       display:flex;
@@ -52,13 +47,10 @@
       justify-content:space-between;
       padding:8px 12px;
     }
-
     .header-inner .link-btn{
       margin-top:0;
     }
-
     main.container{flex:1}
-
     .hero{
       display:flex;
       gap:22px;
@@ -69,7 +61,6 @@
       border-radius:var(--radius);
       box-shadow:0 8px 30px rgba(0,0,0,.6);
     }
-
     .avatar{
       width:90px;
       height:90px;
@@ -77,20 +68,19 @@
       overflow:hidden;
       flex-shrink:0;
     }
-
     .avatar img{width:100%;height:100%;object-fit:cover}
-
     .hero-text{
       display:flex;
       flex-direction:column;
       gap:10px;
     }
-
     .hero-text h3{
       font-size:18px;
       font-weight:700;
+      display:flex;
+      align-items:center;
+      gap:6px;
     }
-
     .spotify_currently-playing{
       display:inline-flex;
       padding:6px 10px;
@@ -99,18 +89,15 @@
       border:1px solid var(--border);
       width:fit-content;
     }
-
     .spotify-playing{
       border-color:#fff;
       box-shadow:0 0 10px rgba(255,255,255,.45);
     }
-
     .spotify-info{
       display:flex;
       gap:8px;
       align-items:center;
     }
-
     .album-art{
       width:38px;
       height:38px;
@@ -118,9 +105,7 @@
       overflow:hidden;
       flex-shrink:0;
     }
-
     .album-art img{width:100%;height:100%;object-fit:cover}
-
     .spotify-text{
       display:flex;
       flex-direction:column;
@@ -128,7 +113,6 @@
       max-width:280px;
       overflow:hidden;
     }
-
     .spotify-track-title{
       font-weight:600;
       font-size:13px;
@@ -136,7 +120,6 @@
       overflow:hidden;
       text-overflow:ellipsis;
     }
-
     .spotify-track-artist{
       font-size:11px;
       color:var(--muted);
@@ -145,16 +128,13 @@
       text-overflow:ellipsis;
       animation:scroll-text 10s linear infinite;
     }
-
     @keyframes scroll-text{
       0%,20%{transform:translateX(0)}
       80%,100%{transform:translateX(calc(-100% + 200px))}
     }
-
     .spotify-track-artist:hover{
       animation-play-state:paused;
     }
-
     .progress-wrapper{
       display:flex;
       align-items:center;
@@ -162,7 +142,6 @@
       font-size:9px;
       margin-top:3px;
     }
-
     .progress-bar-container{
       width:90px;
       height:4px;
@@ -171,9 +150,7 @@
       overflow:hidden;
       flex-shrink:0;
     }
-
     .progress-bar{height:100%;background:#fff}
-
     .loading-row{
       display:flex;
       align-items:center;
@@ -181,7 +158,6 @@
       font-size:12px;
       color:var(--muted);
     }
-
     .spotify-spinner{
       width:14px;
       height:14px;
@@ -190,9 +166,7 @@
       border-radius:50%;
       animation:spin .7s linear infinite;
     }
-
     @keyframes spin{to{transform:rotate(360deg)}}
-
     .card{
       margin-top:12px;
       padding:14px;
@@ -201,10 +175,8 @@
       border:1px solid var(--border);
       font-size:14px;
     }
-
     .inline-list{margin:6px 0 0 18px}
     .inline-list li{margin:3px 0}
-
     .link-btn{
       margin-top:8px;
       display:inline-flex;
@@ -220,7 +192,6 @@
       position:relative;
       transition:box-shadow .25s ease,transform .25s ease,border-color .25s ease;
     }
-
     .link-btn img,
     .link-btn svg{
       width:16px;
@@ -228,7 +199,6 @@
       filter:invert(90%);
       display:block;
     }
-
     .link-btn:hover{
       border-color:#ffffff;
       box-shadow:
@@ -237,45 +207,6 @@
         0 0 28px rgba(182, 182, 182, 0.25);
       transform:translateY(-1px);
     }
-
-    .link-btn[data-tooltip]::after{
-      content:attr(data-tooltip);
-      position:absolute;
-      bottom:120%;
-      left:50%;
-      transform:translateX(-50%) translateY(6px);
-      background:#ffffff;
-      color:#000;
-      font-size:11px;
-      padding:6px 9px;
-      border-radius:8px;
-      white-space:nowrap;
-      opacity:0;
-      pointer-events:none;
-      transition:opacity .2s ease,transform .2s ease;
-      box-shadow:0 6px 20px rgba(0,0,0,.45);
-      z-index:100;
-    }
-
-    .link-btn[data-tooltip]::before{
-      content:"";
-      position:absolute;
-      bottom:calc(120% - 4px);
-      left:50%;
-      transform:translateX(-50%);
-      border-width:6px;
-      border-style:solid;
-      border-color:#1db954 transparent transparent transparent;
-      opacity:0;
-      transition:opacity .2s ease;
-    }
-
-    .link-btn[data-tooltip]:hover::after,
-    .link-btn[data-tooltip]:hover::before{
-      opacity:1;
-      transform:translateX(-50%) translateY(0);
-    }
-
     .site-footer{
       margin-top:10px;
       padding:8px 0;
@@ -284,7 +215,6 @@
       border-top:1px solid var(--border);
       font-size:12px;
     }
-
     @media(max-width:830px){
       .hero{
         flex-direction:column;
@@ -292,21 +222,32 @@
         text-align:center;
       }
     }
-
     .pronouns{
       font-style:italic;
       font-weight:normal;
       font-size:.9em;
     }
-
     .site-header .link-btn:hover{
       box-shadow:none;
       transform:none;
       border-color:var(--border);
     }
+    .pride-flags {
+      display: inline-flex;
+      gap: 6px;
+      margin-left: 10px;
+      vertical-align: middle;
+    } 
+    .pride-flag {
+      width: 27px;
+      height: 17px;
+      object-fit: cover;
+      border-radius: 2px;
+      cursor: default;
+      display: inline-block;
+    }
   </style>
 </head>
-
 <body>
 <header class="site-header">
   <div class="header-inner">
@@ -322,9 +263,15 @@
     <div class="avatar">
       <img src="../assets/pfp.png">
     </div>
-
     <div class="hero-text">
-      <h3>sharpennd <span class="pronouns">(he/they)</span></h3>
+      <h3>
+        sharpennd <span class="pronouns">(he/they)</span>
+        <span class="pride-flags">
+          <img src="../assets/bisexual.png" class="pride-flag">
+          <img src="../assets/transgender.png" class="pride-flag">
+          <img src="../assets/demiaroace.png" class="pride-flag">
+        </span>
+      </h3>
 
       <div id="spotifyBox" class="spotify_currently-playing">
         <div id="spotifyLoading" class="loading-row">
@@ -338,7 +285,6 @@
 
   <section class="card">
     <p>Hi, I'm Grey, also known as <b>'sharpennd'</b> on some corners of the internet, welcome to my website! :3</p>
-
     <p style="margin-top:6px">My current interests include:</p>
     <ul class="inline-list">
       <li>Technology, both modern and vintage</li>
@@ -348,25 +294,23 @@
       <li>Drawing and 2D animation</li>
     </ul>
     <p>...And a whole lot more!</p>
-
     <p style="margin-top:6px">Below is a list of my socials and other links where you can view my content, support me, or contact me!</p>
-
-    <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn" data-tooltip="grey@sharpennd.xyz">
+    <a href="mailto:grey@sharpennd.xyz" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/maildotru.svg">Email
     </a>
-    <a href="https://github.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
+    <a href="https://github.com/sharpennd" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg">GitHub
     </a>
-    <a href="https://www.roblox.com/users/736386964/profile" target="_blank" class="link-btn" data-tooltip="Niqhtlyy">
+    <a href="https://www.roblox.com/users/736386964/profile" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/roblox.svg">Roblox
     </a>
-    <a href="https://twitter.com/sharpennd" target="_blank" class="link-btn" data-tooltip="@sharpennd">
+    <a href="https://twitter.com/sharpennd" target="_blank" class="link-btn">
       <svg viewBox="0 0 30 30"><path d="M28 6.937c-.957.425-1.985.711-3.064.84 1.102-.66 1.947-1.705 2.345-2.951-1.03.611-2.172 1.055-3.388 1.295-.973-1.037-2.359-1.685-3.893-1.685-2.946 0-5.334 2.389-5.334 5.334 0 .418.048.826.138 1.215C8.371 10.762 4.441 8.638 1.809 5.41c-.458.789-.721 1.705-.721 2.684 0 1.85.941 3.483 2.372 4.439-.874-.028-1.697-.268-2.416-.667v.067c0 2.585 1.838 4.741 4.279 5.23-.447.122-.919.187-1.406.187-.343 0-.678-.034-1.003-.095.679 2.119 2.649 3.662 4.983 3.705-1.825 1.431-4.125 2.284-6.625 2.284-.43 0-.855-.025-1.273-.075 2.361 1.513 5.164 2.396 8.177 2.396 9.812 0 15.176-8.128 15.176-15.177 0-.231-.005-.461-.015-.69C26.38 8.945 27.285 8.006 28 6.937z"/></svg>Twitter
     </a>
-    <a href="https://discord.com/users/340138001252220939/" target="_blank" class="link-btn" data-tooltip="sharpennd">
+    <a href="https://discord.com/users/340138001252220939/" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg">Discord
     </a>
-    <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn" data-tooltip="sharpennd">
+    <a href="https://ko-fi.com/sharpennd" target="_blank" class="link-btn">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/kofi.svg">Ko-Fi
     </a>
   </section>
@@ -378,17 +322,14 @@
 
 <script>
   document.getElementById("currentYear").textContent=new Date().getFullYear()
-
   const spotifyBox=document.getElementById("spotifyBox")
   const spotifyLoading=document.getElementById("spotifyLoading")
   const spotifyContent=document.getElementById("spotifyContent")
   const spotifyStatus=document.getElementById("spotifyStatus")
-
   const format=ms=>{
     const s=Math.floor(ms/1000)
     return`${Math.floor(s/60)}:${String(s%60).padStart(2,"0")}`
   }
-
   async function loadSpotify(){
     try{
       const r=await fetch("https://api.lanyard.rest/v1/users/340138001252220939")
@@ -403,7 +344,6 @@
       spotifyContent.innerHTML=`<div class="spotify-info"><div class="album-art"><img src="${d.album_art_url}"></div><div class="spotify-text"><div class="spotify-track-title">${d.song}</div><div class="spotify-track-artist">${d.artist}</div><div class="progress-wrapper"><span>${format(e)}</span><div class="progress-bar-container"><div class="progress-bar" style="width:${p}%"></div></div><span>${format(t)}</span></div></div></div>`
     }catch{spotifyStatus.textContent="Error loading Spotify"}
   }
-  
   loadSpotify()
   setInterval(loadSpotify,1000)
 </script>
